# NDSC-Lab

./: .gitignore  CLAUDE.md  README.md  reference_waterfall_development_plan.md
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: main.py  worker.py
apps/api/app/admin/: queue.py  routes.py
apps/api/app/analytics/: models.py  routes.py  worker.py
apps/api/app/certification/: models.py  pdf.py  routes.py  signer.py
apps/api/app/comments/: models.py  routes.py
apps/api/app/content/: admin_routes.py  markdown.py  models.py  routes.py  service.py  slug.py  transcode.py  uploads.py
apps/api/app/core/: audit.py  db.py  models_base.py  policy.py  r2.py  redis_client.py  settings.py  telemetry.py  types.py
apps/api/app/core/security/: activity_alerts.py  argon2.py  csrf.py  hibp.py  rate_limit.py  signup_flood.py  tokens.py
apps/api/app/curation/: models.py  routes.py
apps/api/app/identity/: contributor_routes.py  deps.py  models.py  oauth.py  oauth_routes.py  routes.py  schemas.py  self_routes.py  service.py  sessions.py
apps/api/app/legal/: erasure.py  export.py  models.py  routes.py
apps/api/app/notifications/: email.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_init.py  0002_full_schema.py  0003_video_transcoded.py  0004_profile_contacts.py
apps/api/tests/: test_argon2.py  test_audit.py  test_cert.py  test_markdown.py  test_policy.py  test_policy_published_edit.py  test_slug.py
apps/api/tests/integration/: conftest.py  test_admin_legal.py  test_auth.py  test_cert_search_workshops.py  test_comments_views.py  test_content_012_raw.py  test_content_flow.py  test_content_gate.py  test_roles_profile.py  test_transcode_e2e.py  test_upload_stream_e2e.py
apps/web/: Dockerfile  next.config.mjs  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/admin/: layout.tsx  page.tsx
apps/web/components/: AdminItemActions.tsx  Alert.tsx  AttachmentManager.tsx  Comments.tsx  ContributorCTA.tsx  CookieBanner.tsx  Field.tsx  FilePicker.tsx  HomeCTA.tsx  ItemPlayer.tsx  ItemSeriesBadge.tsx  ItemViewBeacon.tsx  MarkdownPreview.tsx  Nav.tsx
apps/web/lib/: api.ts  useMe.ts
docs/: 01_requirements.md  02_architecture.md  03_data_model.md  04_tech_stack.md  05_implementation_plan.md  06_verification.md  07_test_plan.md  08_audit_report.md  09_pentest_and_ux_audit.md  10_production_readiness_audit.md
infra/: compose.yml
infra/caddy/: Caddyfile
infra/clamav/: clamd.conf
infra/prometheus/: prometheus.yml
ops/: bootstrap_env.sh  security_invariants.md
ops/runbooks/: firewall.md  key_rotation.md  restore.md
(+36 files in other folders)
